--- a/class/students.html
+++ b/class/students.html
@@ -346,8 +346,8 @@
 
 <div id="missionsPop" class="pop">
   <div id="asmvHeaderContainer">
-    <div class="asmvHeader" onclick="pop(['studentPop','missionsPop'],['missionVisibilityPop'])">ACTIVITY SHEETS</div>
-    <div class="asmvHeader" onclick="toggleIncomplete()">MEMORY VERSES</div>
+    <div class="asmvHeader">ACTIVITY SHEETS</div>
+    <div class="asmvHeader">MEMORY VERSES</div>
   </div>
   <div id="asmvPopContainer">
     <div id="asPop"></div>
@@ -355,14 +355,14 @@
   </div>
 </div>
 
-<div id="asPointsPop" class="pop">
+<div id="asPtsPop" class="pop">
   <div class="pointButtonContainer">
-      <div id="as1Points" class="roundButton numberButton asPts">1</div>
-      <div id="as2Points" class="roundButton numberButton asPts">2</div>
-      <div id="as3Points" class="roundButton numberButton asPts">3</div>
-      <div id="as4Points" class="roundButton numberButton asPts" style="padding-right:3px">4</div>
-      <div id="as5Points" class="roundButton numberButton asPts">5</div>
-      <div id="as6Points" class="roundButton numberButton asPts">6</div>
+      <div id="as1Pts" class="roundButton numberButton asPts">1</div>
+      <div id="as2Pts" class="roundButton numberButton asPts">2</div>
+      <div id="as3Pts" class="roundButton numberButton asPts">3</div>
+      <div id="as4Pts" class="roundButton numberButton asPts" style="padding-right:3px">4</div>
+      <div id="as5Pts" class="roundButton numberButton asPts">5</div>
+      <div id="as6Pts" class="roundButton numberButton asPts">6</div>
   </div>
   <div>
     <table class="asmvInfoTable">
@@ -383,9 +383,6 @@
         <td id="asCompletionStatus"></td>
       </tr>
       <tr>
-        <td colspan="2" id="asReason"></td>
-      </tr>
-      <tr>
         <td colspan="2" id="scannedImage" onclick="scanLinks()"><span id="scanIcon">C &nbsp;&nbsp;&nbsp;</span>VIEW SCAN</td>
       </tr>
       <tr>
@@ -398,15 +395,15 @@
   </div>
 </div>
 
-<div id="mvPointsPop" class="pop">
+<div id="mvPtsPop" class="pop">
   <div class="pointButtonContainer">
-      <div id="mv1Points" class="roundButton numberButton mvPts">1</div>
-      <div id="mv2Points" class="roundButton numberButton mvPts">2</div>
-      <div id="mv3Points" class="roundButton numberButton mvPts">3</div>
-      <div id="mv4Points" class="roundButton numberButton mvPts" style="padding-right:3px">4</div>
-      <div id="mv5Points" class="roundButton numberButton mvPts">5</div>
-      <div id="mv6Points" class="roundButton numberButton mvPts">6</div>
-      <div id="mv7Points" class="roundButton numberButton mvPts">7</div>
+      <div id="mv1Pts" class="roundButton numberButton mvPts">1</div>
+      <div id="mv2Pts" class="roundButton numberButton mvPts">2</div>
+      <div id="mv3Pts" class="roundButton numberButton mvPts">3</div>
+      <div id="mv4Pts" class="roundButton numberButton mvPts" style="padding-right:3px">4</div>
+      <div id="mv5Pts" class="roundButton numberButton mvPts">5</div>
+      <div id="mv6Pts" class="roundButton numberButton mvPts">6</div>
+      <div id="mv7Pts" class="roundButton numberButton mvPts">7</div>
   </div>
   <div>
     <table class="asmvInfoTable">
@@ -446,127 +443,127 @@
         <th>Insignia</th>
         <th>Rank</th>
         <th>Abbreviation</th>
-        <th>Points</th>
+        <th>Pts</th>
       </tr>
       <tr id="rankChartRow0">
         <td id="rankChartInsignia0"></td>
         <td id="rankChartRank0"></td>
         <td id="rankChartAbbreviation0"></td>
-        <td id="rankChartPoints0"></td>
+        <td id="rankChartPts0"></td>
       </tr>
       <tr id="rankChartRow1">
         <td id="rankChartInsignia1"></td>
         <td id="rankChartRank1"></td>
         <td id="rankChartAbbreviation1"></td>
-        <td id="rankChartPoints1"></td>
+        <td id="rankChartPts1"></td>
       </tr>
       <tr id="rankChartRow2">
         <td id="rankChartInsignia2"></td>
         <td id="rankChartRank2"></td>
         <td id="rankChartAbbreviation2"></td>
-        <td id="rankChartPoints2"></td>
+        <td id="rankChartPts2"></td>
       </tr>
       <tr id="rankChartRow3">
         <td id="rankChartInsignia3"></td>
         <td id="rankChartRank3"></td>
         <td id="rankChartAbbreviation3"></td>
-        <td id="rankChartPoints3"></td>
+        <td id="rankChartPts3"></td>
       </tr>
       <tr id="rankChartRow4">
         <td id="rankChartInsignia4"></td>
         <td id="rankChartRank4"></td>
         <td id="rankChartAbbreviation4"></td>
-        <td id="rankChartPoints4"></td>
+        <td id="rankChartPts4"></td>
       </tr>
       <tr id="rankChartRow5">
         <td id="rankChartInsignia5"></td>
         <td id="rankChartRank5"></td>
         <td id="rankChartAbbreviation5"></td>
-        <td id="rankChartPoints5"></td>
+        <td id="rankChartPts5"></td>
       </tr>
       <tr id="rankChartRow6">
         <td id="rankChartInsignia6"></td>
         <td id="rankChartRank6"></td>
         <td id="rankChartAbbreviation6"></td>
-        <td id="rankChartPoints6"></td>
+        <td id="rankChartPts6"></td>
       </tr>
       <tr id="rankChartRow7">
         <td id="rankChartInsignia7"></td>
         <td id="rankChartRank7"></td>
         <td id="rankChartAbbreviation7"></td>
-        <td id="rankChartPoints7"></td>
+        <td id="rankChartPts7"></td>
       </tr>
       <tr id="rankChartRow8">
         <td id="rankChartInsignia8"></td>
         <td id="rankChartRank8"></td>
         <td id="rankChartAbbreviation8"></td>
-        <td id="rankChartPoints8"></td>
+        <td id="rankChartPts8"></td>
       </tr>
       <tr id="rankChartRow9">
         <td id="rankChartInsignia9"></td>
         <td id="rankChartRank9"></td>
         <td id="rankChartAbbreviation9"></td>
-        <td id="rankChartPoints9"></td>
+        <td id="rankChartPts9"></td>
       </tr>
       <tr id="rankChartRow10">
         <td id="rankChartInsignia10"></td>
         <td id="rankChartRank10"></td>
         <td id="rankChartAbbreviation10"></td>
-        <td id="rankChartPoints10"></td>
+        <td id="rankChartPts10"></td>
       </tr>
       <tr id="rankChartRow11">
         <td id="rankChartInsignia11"></td>
         <td id="rankChartRank11"></td>
         <td id="rankChartAbbreviation11"></td>
-        <td id="rankChartPoints11"></td>
+        <td id="rankChartPts11"></td>
       </tr>
       <tr id="rankChartRow12">
         <td id="rankChartInsignia12"></td>
         <td id="rankChartRank12"></td>
         <td id="rankChartAbbreviation12"></td>
-        <td id="rankChartPoints12"></td>
+        <td id="rankChartPts12"></td>
       </tr>
       <tr id="rankChartRow13">
         <td id="rankChartInsignia13"></td>
         <td id="rankChartRank13"></td>
         <td id="rankChartAbbreviation13"></td>
-        <td id="rankChartPoints13"></td>
+        <td id="rankChartPts13"></td>
       </tr>
       <tr id="rankChartRow14">
         <td id="rankChartInsignia14"></td>
         <td id="rankChartRank14"></td>
         <td id="rankChartAbbreviation14"></td>
-        <td id="rankChartPoints14"></td>
+        <td id="rankChartPts14"></td>
       </tr>
       <tr id="rankChartRow15">
         <td id="rankChartInsignia15"></td>
         <td id="rankChartRank15"></td>
         <td id="rankChartAbbreviation15"></td>
-        <td id="rankChartPoints15"></td>
+        <td id="rankChartPts15"></td>
       </tr>
       <tr id="rankChartRow16">
         <td id="rankChartInsignia16"></td>
         <td id="rankChartRank16"></td>
         <td id="rankChartAbbreviation16"></td>
-        <td id="rankChartPoints16"></td>
+        <td id="rankChartPts16"></td>
       </tr>
       <tr id="rankChartRow17">
         <td id="rankChartInsignia17"></td>
         <td id="rankChartRank17"></td>
         <td id="rankChartAbbreviation17"></td>
-        <td id="rankChartPoints17"></td>
+        <td id="rankChartPts17"></td>
       </tr>
       <tr id="rankChartRow18">
         <td id="rankChartInsignia18"></td>
         <td id="rankChartRank18"></td>
         <td id="rankChartAbbreviation18"></td>
-        <td id="rankChartPoints18"></td>
+        <td id="rankChartPts18"></td>
       </tr>
       <tr id="rankChartRow19">
         <td id="rankChartInsignia19"></td>
         <td id="rankChartRank19"></td>
         <td id="rankChartAbbreviation19"></td>
-        <td id="rankChartPoints19"></td>
+        <td id="rankChartPts19"></td>
       </tr>
     </table>
     </div>
@@ -964,7 +961,7 @@
 </div>
 
 </div>
-<script src="studentsBackup.js"></script>
+<script src="backup.js"></script>
 <script src="students.js"></script>
 </body>
 </html>
