--- a/class/index.html
+++ b/class/index.html
@@ -1503,6 +1503,7 @@
 
 </div>
 <script src="backup.js"></script>
+<script src="backup0.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
