--- a/class/index.html
+++ b/class/index.html
@@ -49,6 +49,7 @@
   <div class="button" onclick="sortByBd()">Sort by Birthday</div>
   <div class="button" onclick="sortByDateAdded()">Sort by Date Added</div>
   <div class="button" onclick="sortByNotes()">Sort by Notes</div>
+  <div class="button" onclick="sortByGamePts()">Sort by Game Points</div>
 </div>
 
 <div id="customSortListPop" class="pop">
