--- a/class/index.html
+++ b/class/index.html
@@ -86,15 +86,13 @@
 </div>
 
 <div id="pwdPop" class="pop">
-  <div class="navigationButtonContainer">
-    <div class="homeButton" onclick="pop(['pwdPop'],['wtlPop'])">5</div>
-  </div>
   <p>Enter password to confirm overwriting local storage:</p>
-  <div class="flex" id="pwdFlexDiv">
-    <input type="text" id="pwd1" class="textInputField6" maxlength="1" onkeydown="pwdEntry(1)">
-    <input type="text" id="pwd2" class="textInputField6" maxlength="1" onkeydown="pwdEntry(2)">
-    <input type="text" id="pwd3" class="textInputField6" maxlength="1" onkeydown="pwdEntry(3)">
-    <input type="text" id="pwd4" class="textInputField6" maxlength="1" onkeydown="pwdEntry(4)">
+  <div>
+    <input type="text" id="pwd" class="textInputField6" maxlength="4" onkeydown="pressKey(13,'pwdOkButton'); pressKey(27,'pwdCancelButton')">
+  </div>
+  <div class="optionButtonContainer">
+    <div class="roundButton1 cancelButton" id="pwdCancelButton" onclick="pop(['pwdPop'],['wtlPop'])">X</div>
+    <div class="roundButton1 okButton" id="pwdOkButton" onclick="pwdEntry()">V</div>
   </div>
 </div>
 
