--- a/class/index.html
+++ b/class/index.html
@@ -83,6 +83,7 @@
   <div id="randButton" class="button" onclick="pop(['mainMenuPop'],['randPop'])">Random</div>
   <div id="teamsButton" class="button" onclick="teams()">Teams</div>
   <div class="button" id="teacherNotesButton" onclick="pop(['mainMenuPop'],['teacherNotesPop']); populateTeacherNotes()">Notes</div>
+  <div class="button" onclick="pop(['mainMenuPop'],['pwdPop'])">TEST</div>
 </div>
 
 <div id="pwdPop" class="pop">
