--- a/class/index.html
+++ b/class/index.html
@@ -86,7 +86,7 @@
 </div>
 
 <div id="pwdPop" class="pop">
-  <p>Enter password to confirm overwriting local storage:</p>
+  <p>Enter password to confirm overwriting local storage (test):</p>
   <div>
     <input type="text" id="pwd" class="textInputField6" maxlength="4" onkeydown="pressKey(13,'pwdOkButton'); pressKey(27,'pwdCancelButton')">
   </div>
