--- a/class/index.html
+++ b/class/index.html
@@ -83,12 +83,13 @@
   <div id="randButton" class="button" onclick="pop(['mainMenuPop'],['randPop'])">Random</div>
   <div id="teamsButton" class="button" onclick="teams()">Teams</div>
   <div class="button" id="teacherNotesButton" onclick="pop(['mainMenuPop'],['teacherNotesPop']); populateTeacherNotes()">Notes</div>
+  <div id="teamsButton" class="button" onclick="pop(['archivedBackupsPop'],['pwdPop'])">TEST</div>
 </div>
 
 <div id="pwdPop" class="pop">
-  <p>Enter password to confirm overwriting local storage (test):</p>
+  <p>Enter password to confirm overwriting local storage:</p>
   <div>
-    <input type="text" id="pwd" class="textInputField6" maxlength="4" onkeydown="pressKey(13,'pwdOkButton'); pressKey(27,'pwdCancelButton')">
+    <input type="text" id="pwd" class="textInputField6" maxlength="4" onkeydown="pressKey(13,'pwdOkButton'); pressKey(27,'pwdCancelButton')" autofocus>
   </div>
   <div class="optionButtonContainer">
     <div class="roundButton1 cancelButton" id="pwdCancelButton" onclick="pop(['pwdPop'],['wtlPop'])">X</div>
