--- a/class/index.html
+++ b/class/index.html
@@ -89,7 +89,7 @@
 <div id="pwdPop" class="pop">
   <p>Enter password to confirm overwriting local storage:</p>
   <div>
-    <input type="text" id="pwd" class="textInputField6" maxlength="4" onkeydown="pressKey(13,'pwdOkButton'); pressKey(27,'pwdCancelButton')" autofocus>
+    <input type="text" id="pwd" class="textInputField6" maxlength="4" onkeydown="pressKey(13,'pwdOkButton'); pressKey(27,'pwdCancelButton')">
   </div>
   <div class="optionButtonContainer">
     <div class="roundButton1 cancelButton" id="pwdCancelButton" onclick="pop(['pwdPop'],['wtlPop'])">X</div>
@@ -874,9 +874,7 @@
 
 <div id="studentPropertiesPop" class="pop">
   <div id="studentProperties">
-    <p>first: <span id="first"></span></p>
-    <p>last: <span id="last"></span></p>
-    <p>full: <span id="full"></span></p>
+    <p>name: <span id="name"></span></p>
     <p>pron: <span id="pron"></span></p>
     <p>gender: <span id="gender"></span></p>
     <p>dateAdded: <span id="dateAdded"></span></p>
