--- a/class/index.html
+++ b/class/index.html
@@ -902,6 +902,14 @@
   </div>
 </div>
 
+<!-- <div id="backupOLDPop" class="pop">
+  <div id="backupOLDArrays" onclick="selectText('backupOLDArrays')">
+    <div id="slBackupOLDArray"></div>
+    <div id="attBackupOLDArray"></div>
+    <div id="teacherNotesBackupOLDArray"></div>
+  </div>
+</div> -->
+
 <div id="rankChartPop" class="pop">
   <a href="../docs/ranks.pdf" target="_blank"><p>click here to download printable chart</p></a>
   <div id = "rankChartContainer">
@@ -1482,6 +1490,7 @@
 
 </div>
 <script src="backup.js"></script>
+<!-- <script src="backupOLD.js"></script> -->
 <script src="main.js"></script>
 </body>
 </html>
