--- a/class/index.html
+++ b/class/index.html
@@ -874,14 +874,15 @@
   <div id="studentProperties">
     <p>name: <span id="name"></span></p>
     <p>gender: <span id="gender"></span></p>
-    <p>dateAdded: <span id="dateAdded"></span></p>
-    <p>bd: <span id="bd"></span></p>
+    <p>dateAdded: <span id="dateAdded"></span><span id="dateAddedConverted"></span></p>
+    <p>bd: <span id="bd"></span><span id="bdnConverted"></span></p>
     <p>email: <span id="email"></span></p>
     <p>photo: <span id="photo"></span></p>
     <p>notes: <span id="notes"></span></p>
     <p>pts: <span id="pts"></span></p>
+    <p>gamePts: <span id="gamePts"></span></p>
     <p>classRank: <span id="classRank"></span></p>
-    <p>rank: <span id="rank"></span></p>
+    <p>rank: <span id="rank"></span><span id="rankConverted"></span></p>
     <p>att: <span id="att"></span></p>
     <p>attArr: <span id="attArr"></span></p>
     <p>promo: <span id="promo"></span></p>
