--- a/class/index.html
+++ b/class/index.html
@@ -186,7 +186,7 @@
 </div>
 
 <div id="wtlPop" class="pop buttonArr">
-    <p>Choose data to load TEST</p>
+    <p>Choose data to load</p>
     <div class="button" onclick="loadLS()">Local Storage</div>
     <div class="button" onclick="pop(['wtlPop'],['pwdPop'])">Backup</div>
 </div>
